Fixed preset overflow

--- a/web/css/presets.style.css
+++ b/web/css/presets.style.css
@@ -11,10 +11,12 @@
     min-width: 100px;
 
     height: 100%;
+    max-height: 100%;
 }
 
 #presetItemContainer {
     height: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
 
@@ -32,6 +34,10 @@
 	flex-basis: 0px;
 }
 
+.presetItemTitle {
+    flex: 1;
+}
+
 .presetItem {
     display: flex;
     flex-direction: column;
@@ -45,14 +51,17 @@
 
     color: aliceblue;
     background-color: rgb(255, 20, 235);
+
 }
 
 .savedPreset {
+    flex-basis: 100px;
+    min-height: 100px;
 }
 
 .presetItemButton {
     margin: 10px;
-    flex: 1;
+    flex: 2;
     margin-top: 0px;
 }
 
